# bondviz

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.streamlit/: config.toml
app/: streamlit_app.py
docs/: ARCHITECTURE.md  BACKLOG.md  BUGS.md  DESIGN-SYSTEM.md  README.md
docs/superpowers/plans/: 2026-06-01-bondviz-quant-terminal-redesign.md  2026-06-02-bondviz-vercel-frontend.md  2026-06-05-bondviz-curve-analytics-trio.md  2026-06-06-bondviz-stocks-polygon.md  2026-06-21-carry-rolldown.md  2026-06-21-inversion-recession-signal.md
scripts/: fetch_treasury.py  price_bond.py
scripts/ps/: ActivateAndRun.ps1
scripts/unix/: run_streamlit.sh  setup.sh
scripts/win/: dev_check.bat  run_cli_fetch.bat  run_cli_price.bat  run_streamlit.bat  setup_venv.bat
src/bondviz/: _native.cpp  app_logic.py  home_view.py  pca_view.py  plots.py  pricing.py  pricing_view.py  scenarios.py  stocks.py  stocks_view.py  theme.py  treasury.py  visualizer.py
tests/: test_analytics.py  test_app_logic.py  test_scenarios.py  test_theme.py
web/: CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.ts
web/app/: PrefetchSignal.tsx  globals.css  layout.tsx  page.tsx
web/components/: Nav.tsx
web/lib/: carry.test.ts  carry.ts  chartColors.test.ts  chartColors.ts  curve.test.ts  curve.ts  finance.test.ts  finance.ts  format.test.ts  format.ts  interp.ts  pca.test.ts  pca.ts  polygon.test.ts  polygon.ts  portfolio.test.ts  portfolio.ts  signal.test.ts  signal.ts  spreadsCache.test.ts  spreadsCache.ts  treasury.test.ts  treasury.ts  types.ts
(+46 files in other folders)
