[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bondviz"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.2",
  "python-dotenv>=1.0.1",
  "matplotlib>=3.9.0",
  "streamlit>=1.38.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
