[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bondviz"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.2",
  "pandas-datareader>=0.10.0",
  "python-dotenv>=1.0.1",
  "matplotlib>=3.9.0",
  "streamlit>=1.38.0"
  , "polygon-api-client>=1.13.0"
  , "streamlit-option-menu>=0.3.6"
  , "scikit-learn>=1.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
